--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	flex-direction: row;
 	height: 77vh;
 	width: 100%;
+	padding-top: 15px;
 	padding-bottom: 15px;
 	flex-grow: 1;
 	animation: none;
