--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 	flex: 1;
 	margin-top: auto;
 	background-color: #00c3ff;
-	border-left: 1px solid #ffffff;
+	margin-left: 1px;
 }
 
 .swap-rect {
