--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 	flex: 1;
 	margin-top: auto;
 	background-color: #00c3ff;
-	margin-left: 1px;
+	border-left: 1px solid #ffffff;
 }
 
 .swap-rect {
