improved clock made it 24 hour format view width relative text size

--- a/clock/style.css
+++ b/clock/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: monospace;
-    font-size: 9rem;
+    font-size: 8vw;
     background: #282c34;
     color: white;
     text-align: center;
