added fullscreen mode to clock

--- a/clock/style.css
+++ b/clock/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: monospace;
     font-size: 8vw;
-    background: #282c34;
     color: white;
     text-align: center;
     margin: 0%;
@@ -10,7 +9,24 @@ body {
 #time {
     height: 100vh;
     display: flex;
+    background: #282c34;
     align-items: center;
     justify-content: center;
     color: hsl(218 10% 85%);
+}
+
+.fscbtn {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    background-color: #586070;
+    margin-right: 4vw;
+    margin-bottom: 4vh;
+    font-size: large;
+    height: 10%;
+    width: 10%;
+}
+
+.fscbtn:hover {
+    background-color: #4d5361;
 }
