made /enc look better

--- a/enc/style.css
+++ b/enc/style.css
@@ -1,3 +1,15 @@
 textarea {
     resize: none;
+    font-size: 75%;
+}
+
+input {
+    font-size: 75%;
+}
+
+body {
+    text-align: center;
+    font-size: 200%;
+    margin: 0;
+    overflow-wrap: anywhere;
 }
