fixed base64 encoding and decoding, and limited width of output fields

--- a/enc/style.css
+++ b/enc/style.css
@@ -7,6 +7,16 @@ input {
     font-size: 75%;
 }
 
+.output {
+    display: inline-block;
+    max-width: 85vw;
+    font-family: monospace;
+}
+
+label {
+    display: block;
+}
+
 body {
     text-align: center;
     font-size: 175%;
