--- a/clock/style.css
+++ b/clock/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: monospace;
-    font-size: 8vw;
+    font-size: 18vw;
     background: #282c34;
     text-align: center;
     margin: 0%;
@@ -12,4 +12,8 @@ body {
     align-items: center;
     justify-content: center;
     color: hsl(218 10% 85%);
+}
+
+#date {
+    font-size: 4vw;
 }
