--- a/clock/style.css
+++ b/clock/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: monospace;
     font-size: 18vw;
-    background: #282c34;
+    background: #000000;
     text-align: center;
     margin: 0%;
 }
@@ -11,7 +11,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: hsl(218 10% 85%);
+    color: #ffffff;
 }
 
 #date {
